--- a/ExploreCalifornia/appsettings.json
+++ b/ExploreCalifornia/appsettings.json
@@ -1,13 +1,15 @@
 {
+  "ConnectionStrings": {"BlogDataContext": "Server=(localdb)\\mssqllocaldb;Database=ExploreCalifornia;Trusted_Connection=True;"},
   "FeatureToggles": {
 
     "EnableDeveloperExceptions": true
   },
   "Logging": {
-  "LogLevel": {
-    "Default": "Information",
-    "Microsoft": "Warning",
-    "Microsoft.Hosting.Lifetime": "Information"
-  }
-}, 
-  "AllowedHosts": "*" }
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*"
+}
