--- a/ExploreCalifornia/appsettings.json
+++ b/ExploreCalifornia/appsettings.json
@@ -1,14 +1,10 @@
 {
-  "ConnectionStrings": {"BlogDataContext": "Server=(localdb)\\mssqllocaldb;Database=ExploreCalifornia;Trusted_Connection=True;"},
   "FeatureToggles": {
-
-    "EnableDeveloperExceptions": true
+    "DeveloperExceptions": false
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
   "AllowedHosts": "*"
