--- a/ExploreCalifornia/ExploreCalifornia.csproj
+++ b/ExploreCalifornia/ExploreCalifornia.csproj
@@ -5,6 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\css\fonts\DejaVuSans-Bold-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DejaVuSans-BoldOblique-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DejaVuSans-Oblique-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DejaVuSans-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DejaVuSansCondensed-Bold-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DejaVuSansCondensed-BoldOblique-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DejaVuSansCondensed-Oblique-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DejaVuSansCondensed-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DroidSerif-Bold-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DroidSerif-BoldItalic-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DroidSerif-Italic-webfont.svg" />
+    <None Include="wwwroot\css\fonts\DroidSerif-Regular-webfont.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.16">
       <PrivateAssets>all</PrivateAssets>
