--- a/ExploreCalifornia/appsettings.Development.json
+++ b/ExploreCalifornia/appsettings.Development.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "BlogDataContext": "Server=(localdb)\\mssqllocaldb;Database=ExploreCalifornia;Trusted_Connection=True;",
+    "IdentityDataContext": "Server=(localdb)\\mssqllocaldb;Database=ExploreCalifornia_Identity;Trusted_Connection=True;"
+  },
+  "FeatureToggles": {
+    "DeveloperExceptions": true
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
 }
